--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,31 @@
-<header>header</header>
+<header>
+    <div class="container">
+        <div class="header">
+            <div class="header__logo">
+                <svg xmlns="http://www.w3.org/2000/svg" width="59" height="42" viewBox="0 0 59 42" fill="none">
+                    <path d="M2.41669 22L14.0233 40L29.5 27L2.41669 22Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M56.5833 22L44.9768 40L29.5 27L56.5833 22Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M14.6042 40H44.3959L29.5 27L14.6042 40Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M13.25 24L29.5 2L45.75 24" stroke="#00C1EC" stroke-width="4" stroke-linejoin="round"/>
+                </svg>
+                <h2 class="header__title">Notitanic</h2>
+            </div>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">About me</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
