added intro, animated burger menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,24 @@
                         <a class="nav__link" href="#">Contact</a>
                     </li>
                 </ul>
+                <button class="burger" type="button" id="navToggle">
+                    <span>Открыть навигацию</span>
+                </button>
             </nav>
         </div>
     </div>
+    <ul class="nav__list  nav__list--borger" id="navMobile">
+        <li class="nav__item">
+            <a class="nav__link" href="#">Home</a>
+        </li>
+        <li class="nav__item">
+            <a class="nav__link  nav__link--wrap" href="#">About me</a>
+        </li>
+        <li class="nav__item">
+            <a class="nav__link" href="#">Portfolio</a>
+        </li>
+        <li class="nav__item">
+            <a class="nav__link" href="#">Contact</a>
+        </li>
+    </ul>
 </header>
