--- a/src/assets/scss/blocks/nav.scss
+++ b/src/assets/scss/blocks/nav.scss
@@ -1,27 +1,108 @@
 .nav {
+    width: 100%;
+
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 
-    margin-right: 92px;
+    margin: 0 92px;
+
+    position: relative;
+
+    @include breakpoint($notebook_m-bp) {
+        margin: 0 52px 0 92px;
+    }
+
+    @include breakpoint($notebook-bp) {
+        margin: 0 16px 0 152px;
+    }
+
+    @include breakpoint($tablet-bp) {
+        margin: 0 16px;
+    }
 }
 
 .nav__list {
+    width: 100%;
+    max-width: 710px;
+
     display: flex;
+    justify-content: space-between;
+
+    @include breakpoint($tablet-bp) {
+        display: none;
+    }
+
+    &--borger {
+        height: 0;
+        max-width: 100%;
+
+        display: flex;
+
+        position: absolute;
+        top: 78px;
+        left: 0;
+
+        padding: 0 40px;
+
+        overflow: hidden;
+
+        background: $blue;
+
+        transition: all 0.2s linear;
+
+        .nav__link {
+            color: #2c2c2c;
+            font-weight: 700;
+        }
+
+        .show-nav & {
+            height: auto;
+            padding: 20px 40px;
+        }
+
+        @include breakpoint($mobile-bp) {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
+
+.nav__item {
+    margin-left: 100%;
+
+    transition: all 1s linear;
+
+    .show-nav & {
+        margin: 0;
+    }
 }
 
 .nav__item:not(:last-child) {
-    margin-right: 145px;
-  }
+    @include breakpoint($mobile-bp) {
+        margin-bottom: 0px;
+
+        .show-nav & {
+            margin-bottom: 7px;
+        }
+    }
+}
+
+
 
 .nav__link {
     font-weight: 300;
     font-size: 18px;
     line-height: 21px;
 
-    color: #E4E4E4;
+    color: $light-gray;
     text-decoration: none;
 
     position: relative;
+
+    &--wrap {
+        white-space: nowrap;
+    }
 
     &:after {
         content: '';
