--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,9 +7,9 @@
 body {
     background: linear-gradient(101.56deg, #2C2C2C 1.56%, #1C1C1C 95.55%);
 
+    color: $light-gray;
     font-family: "Arodora Pro";
     font-size: 20px;
-    color: $white;
     margin: 0;
 }
 
@@ -27,8 +27,10 @@ body {
 // header
 @import "blocks/header";
 @import "blocks/nav";
+@import "blocks/burger";
 
 //main
+@import "blocks/intro";
 
 
 //footer
