--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -7,4 +7,5 @@ $notebook_l-bp: 1440px;
 $notebook_m-bp: 1150px;
 $notebook-bp: 1024px;
 $tablet-bp: 768px;
+$mobile_m-bp: 630px;
 $mobile-bp: 425px;
