--- a/src/assets/scss/blocks/about.scss
+++ b/src/assets/scss/blocks/about.scss
@@ -12,24 +12,38 @@
 .about__windows-top {
     display: grid;
     grid-template-columns: 0fr 0fr 0fr 0fr;
-    justify-content: space-between;
-
-    overflow: auto;
-
-    padding: 0 20px;
-}
-
-.about__windows-bottom {
-    display: grid;
-    grid-template-columns: 0fr 0fr 0fr;
+    grid-column-gap: 40px;
     justify-content: center;
 
     overflow: auto;
 
     padding: 0 20px;
 
-    @include breakpoint($notebook-bp) {
-        justify-content: space-between;
+    @include breakpoint($notebook_m-bp) {
+        grid-template-columns: 0fr 0fr;
+    }
+
+    @include breakpoint($mobile_m-bp) {
+        grid-template-columns: 0fr;
+    }
+}
+
+.about__windows-bottom {
+    display: grid;
+    grid-template-columns: 0fr 0fr 0fr;
+    grid-column-gap: 40px;
+    justify-content: center;
+
+    overflow: auto;
+
+    padding: 0 20px;
+
+    @include breakpoint($notebook_m-bp) {
+        grid-template-columns: 0fr 0fr;
+    }
+
+    @include breakpoint($mobile_m-bp) {
+        grid-template-columns: 0fr;
     }
 }
 
@@ -54,7 +68,7 @@
     height: 270px;
 
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     flex-direction: column;
 
@@ -63,16 +77,13 @@
     border-radius: 29px;
 
     margin-bottom: 30px;
+    padding-bottom: 50px;
 
     position: absolute;
     top: 10px;
     z-index: 2;
 
     transition: all 0.2s linear;
-}
-
-.about__window:not(:last-child) {
-    margin-right: 40px;
 }
 
 .about__window-title {
@@ -103,4 +114,264 @@
     z-index: 1;
 
     opacity: 0.6;
+}
+
+
+
+// about__basic
+.about__basic {
+    position: relative;
+
+    margin: 153px 0 50px -47px;
+
+    @include breakpoint($notebook-bp) {
+        margin: 104px 0 50px 0;
+    }
+}
+
+.about__basic-icons {
+    display: flex;
+    position: relative;
+
+    @include breakpoint($notebook_l-bp) {
+        justify-content: center;
+    }
+}
+
+.about__circle-one {
+    width: 792px;
+    height: 792px;
+
+    border-radius: 50%;
+    border: 89px solid $light-gray;
+    filter: drop-shadow(0px 4px 70px rgba(255, 255, 255, 0.25));
+
+    @include breakpoint($notebook_l-bp) {
+        width: 650px;
+        height: 650px;
+    }
+
+    @include breakpoint($notebook-bp) {
+        width: 500px;
+        height: 500px;
+
+        margin-top: 100px;
+        margin-left: -107px;
+
+        border: 75px solid $light-gray;
+    }
+
+    @include breakpoint($tablet-bp) {
+        display: none;
+    }
+}
+
+.about__circles {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    margin: -29px 0 0 -55px;
+
+    @include breakpoint($tablet-bp) {
+        margin-left: 0;
+        align-items: flex-start;
+    }
+}
+
+.about__circle-two {
+    width: 356px;
+    height: 356px;
+
+    margin-bottom: 119px;
+
+    border-radius: 50%;
+    border: 34px solid #E2A200;
+    filter: drop-shadow(0px 4px 70px rgba(226, 162, 0, 0.25));
+
+    @include breakpoint($notebook_l-bp) {
+        width: 300px;
+        height: 300px;
+    }
+
+    @include breakpoint($tablet-bp) {
+        margin: -40px 0 119px -200px;
+    }
+
+    @include breakpoint($tablet-bp) {
+        margin: -40px 0 200px -200px;
+    }
+
+    @include breakpoint($mobile-bp) {
+        margin: -40px 0 135px -200px;
+    }
+}
+
+.about__circle-three {
+    width: 486px;
+    height: 486px;
+
+    border-radius: 50%;
+    border: 55px solid $blue;
+    filter: drop-shadow(0px 4px 70px rgba(0, 193, 236, 0.25));
+
+    @include breakpoint($notebook_l-bp) {
+        width: 430px;
+        height: 430px;
+    }
+
+    @include breakpoint($tablet-bp) {
+        width: 330px;
+        height: 330px;
+
+        margin-right: -80px;
+    }
+
+    @include breakpoint($mobile-bp) {
+        width: 280px;
+        height: 280px;
+
+        margin-right: -30px;
+
+        border: 35px solid $blue;
+    }
+}
+
+
+.about__basic-content {
+    display: flex;
+
+    position: absolute;
+    top: 0;
+    left: 148px;
+
+    @include breakpoint($notebook-bp) {
+        width: 100%;
+        left: 0;
+
+        display: flex;
+        justify-content: center;
+    }
+}
+
+.about__baisic-together-image {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+
+    margin-right: -40px;
+
+    position: relative;
+    z-index: 2;
+
+    @include breakpoint($notebook-bp) {
+        margin-right: 0;
+    }
+}
+
+.about__baisic-iamges1,
+.about__baisic-iamges2,
+.about__baisic-iamges3 {
+    width: fit-content;
+    height: fit-content;
+
+    padding: 29px;
+
+    background: #2C2C2C;
+    border-radius: 14px;
+
+    @include breakpoint($notebook-bp) {
+        display: none;
+    }
+}
+
+.about__baisic-iamges1 {
+    margin-top: -47px;
+
+    @include breakpoint($notebook_l-bp) {
+        img {
+            width: 210px;
+        }
+    }
+}
+
+.about__baisic-iamges2 {
+    margin-bottom: -45px;
+
+    @include breakpoint($notebook_l-bp) {
+        img {
+            width: 200px;
+        }
+    }
+}
+
+.about__baisic-iamges3 {
+    margin-top: 188px;
+    margin-left: -55px;
+    z-index: 2;
+
+    @include breakpoint($notebook_l-bp) {
+        img {
+            width: 220px;
+        }
+    }
+}
+
+.about__baisic-central {
+    position: relative;
+    z-index: 1;
+
+    background: #2C2C2C;
+    border-radius: 14px;
+
+    padding: 63px;
+
+    @include breakpoint($tablet-bp) {
+        padding: 60px 40px;
+    }
+
+    @include breakpoint($mobile-bp) {
+        padding: 30px 20px;
+    }
+}
+
+.about__baisic-title {
+    font-family: 'NEXT ART';
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 54px;
+
+    position: absolute;
+    top: -27px;
+
+    @include breakpoint($mobile-bp) {
+        font-size: 37px;
+    }
+}
+
+.about__baisic-text {
+    width: 370px;
+
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 0.01em;
+
+    @include breakpoint($notebook_m-bp) {
+        width: 320px;
+        font-size: 18px;
+        line-height: 23px;
+    }
+
+    @include breakpoint($tablet-bp) {
+        width: 290px;
+        font-size: 17px;
+        line-height: 21px;
+    }
+
+    @include breakpoint($mobile-bp) {
+        width: 250px;
+        font-size: 14px;
+        line-height: 20px;
+    }
 }
