--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,16 +32,16 @@
         </div>
     </div>
     <ul class="nav__list  nav__list--borger" id="navMobile">
-        <li class="nav__item">
+        <li class="nav__item-one">
             <a class="nav__link" href="#">Home</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item-two">
             <a class="nav__link  nav__link--wrap" href="#">About me</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item-three">
             <a class="nav__link" href="#">Portfolio</a>
         </li>
-        <li class="nav__item">
+        <li class="nav__item-four">
             <a class="nav__link" href="#">Contact</a>
         </li>
     </ul>
