--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,46 @@
-<footer>Footer</footer>
+<footer>
+    <div class="container">
+        <div class="footer">
+            <div class="footer__menu">
+                <ul class="nav__list  nav__list--footer">
+                    <li class="nav__item-one">
+                        <a class="nav__link" href="#">Home</a>
+                    </li>
+                    <li class="nav__item-two">
+                        <a class="nav__link  nav__link--wrap" href="#">About me</a>
+                    </li>
+                    <li class="nav__item-three">
+                        <a class="nav__link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav__item-four">
+                        <a class="nav__link" href="#">Contact</a>
+                    </li>
+                </ul>
+                <ul class="footer__contact">
+                    <li class="footer__contact-item  footer__contact-item--title">Contact:</li>
+                    <li class="footer__contact-item">Email: <a href="#">notitanic33@gmail.com</a></li>
+                    <li class="footer__contact-item">Inst: <a href="#">notitanic33</a></li>
+                    <li class="footer__contact-item">Calls: <a href="#">+7 (900) - 121 - 54 -54</a></li>
+                </ul>
+            </div>
+            <div class="footer__info">
+                <div class="header__logo">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="59" height="42" viewBox="0 0 59 42" fill="none">
+                        <path d="M2.41669 22L14.0233 40L29.5 27L2.41669 22Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M56.5833 22L44.9768 40L29.5 27L56.5833 22Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M14.6042 40H44.3959L29.5 27L14.6042 40Z" stroke="#00C1EC" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M13.25 24L29.5 2L45.75 24" stroke="#00C1EC" stroke-width="4" stroke-linejoin="round"/>
+                    </svg>
+                    <h2 class="header__title">Notitanic</h2>
+                    <a class="footer__link-up" href="#">
+                        <svg width="24" height="26" viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M22.5 11.5L12 1L1.5 11.5" stroke="#E4E4E4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M12 1L12 25" stroke="#E4E4E4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </a>
+                </div>
+                <p class="footer__copyright">Copyright © 2021, Notitanic</p>
+            </div>
+        </div>
+    </div>
+</footer>
