--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="home">
     <div class="container">
         <div class="header">
             <div class="header__logo">
@@ -13,16 +13,16 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a class="nav__link" href="#">Home</a>
+                        <a class="nav__link" href="#home">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="#">About me</a>
+                        <a class="nav__link" href="#about">About me</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="#">Portfolio</a>
+                        <a class="nav__link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav__item">
-                        <a class="nav__link" href="#">Contact</a>
+                        <a class="nav__link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <button class="burger" type="button" id="navToggle">
@@ -33,16 +33,16 @@
     </div>
     <ul class="nav__list  nav__list--borger" id="navMobile">
         <li class="nav__item-one">
-            <a class="nav__link" href="#">Home</a>
+            <a class="nav__link" href="#home">Home</a>
         </li>
         <li class="nav__item-two">
-            <a class="nav__link  nav__link--wrap" href="#">About me</a>
+            <a class="nav__link  nav__link--wrap" href="#about">About me</a>
         </li>
         <li class="nav__item-three">
-            <a class="nav__link" href="#">Portfolio</a>
+            <a class="nav__link" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav__item-four">
-            <a class="nav__link" href="#">Contact</a>
+            <a class="nav__link" href="#contact">Contact</a>
         </li>
     </ul>
 </header>
