--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,19 +1,19 @@
-<footer>
+<footer id="contact">
     <div class="container">
         <div class="footer">
             <div class="footer__menu">
                 <ul class="nav__list  nav__list--footer">
                     <li class="nav__item-one">
-                        <a class="nav__link" href="#">Home</a>
+                        <a class="nav__link" href="#home">Home</a>
                     </li>
                     <li class="nav__item-two">
-                        <a class="nav__link  nav__link--wrap" href="#">About me</a>
+                        <a class="nav__link  nav__link--wrap" href="#about">About me</a>
                     </li>
                     <li class="nav__item-three">
-                        <a class="nav__link" href="#">Portfolio</a>
+                        <a class="nav__link" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav__item-four">
-                        <a class="nav__link" href="#">Contact</a>
+                        <a class="nav__link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <ul class="footer__contact">
@@ -32,7 +32,7 @@
                         <path d="M13.25 24L29.5 2L45.75 24" stroke="#00C1EC" stroke-width="4" stroke-linejoin="round"/>
                     </svg>
                     <h2 class="header__title">Notitanic</h2>
-                    <a class="footer__link-up" href="#">
+                    <a class="footer__link-up" href="#home">
                         <svg width="24" height="26" viewBox="0 0 24 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M22.5 11.5L12 1L1.5 11.5" stroke="#E4E4E4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             <path d="M12 1L12 25" stroke="#E4E4E4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
